// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadButton should display error 1`] = `
<div>
  <label
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained"
    role="button"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        xd
      </span>
      Dodaj plik
      <input
        hidden=""
        type="file"
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </label>
  <div
    class="MuiPaper-root MuiAlert-root MuiAlert-standardError MuiPaper-elevation0"
    role="alert"
  >
    <div
      class="MuiAlert-icon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
    <div
      class="MuiAlert-message"
    >
      Błąd
    </div>
  </div>
</div>
`;

exports[`UploadButton should match snapshot 1`] = `
<div>
  <label
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-contained"
    role="button"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        xd
      </span>
      Dodaj plik
      <input
        hidden=""
        type="file"
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </label>
  
</div>
`;
